# eipi.boo

./: Cargo.toml  LICENSE  README.md  flake.nix  proof.html  proof.typ
.github/workflows/: build-app-.yml  ci.yml
src/: blocked_items.rs  canvas.rs  confession.rs  handler.rs  input.rs  main.rs  server.rs  tui.rs
src/db/: confession.rs  mod.rs  reply.rs
src/helper/: consts.rs  mod.rs  web.rs
src/model/: blocked_items.rs  confession.rs  mod.rs  reply.rs
src/server/: handler.rs  input.rs  mod.rs
src/tui/: canvas.rs  card_view.rs  compose.rs  confession_box.rs  glow.rs  mod.rs  reply_panel.rs  statusline.rs
