[package]
name = "eipi"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.61"
ratatui = "0.30"
crossterm = "0.28"
rusqlite = { version = "0.40", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
rand = "0.10"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
sha2 = "0.11"
parking_lot = "0.12"
